# EulersMethod

./: README.md  euler.py  pyproject.toml
